--- a/roles/win_ad_install/defaults/main.yml
+++ b/roles/win_ad_install/defaults/main.yml
@@ -1,2 +1,4 @@
----
-# defaults file for win-ad-install
+ad_domain_name: ad1.92ed.example.opentlc.com
+ad_safe_mode_password: "{{ansible_password}}"
+ad_admin_user: "admin@{{ ad_domain_name}}"
+ad_admin_password: "{{ansible_password}}"
